--- a/atom.html
+++ b/atom.html
@@ -22,7 +22,7 @@
 <br>
 <br>
 <br>
-<a href="#"></a>  <img src="https://github.com/DMU-P2625969/labs/blob/main/dog-puppy-on-garden-royalty-free-image-1586966191.jpg" alt="dog">
+<a href="#"></a>  <img src="https://raw.githubusercontent.com/DMU-P2625969/labs/main/golden-retriever-puppy.jpg" alt="dog">
 
 <link rel="file:///C:/Users/marci/Desktop/Atom/atom2.html" href="/css/master.css">
 </center>
