--- a/atom2.html
+++ b/atom2.html
@@ -15,7 +15,7 @@
 <br>
 <br>
 <center>
-  <img src="golden-retriever-puppy.jpg" alt="dog">
+<a href="#"></a>   <img src="golden-retriever-puppy.jpg" alt="dog">
 <br>
 <br>
 </center>
