--- a/atom.html
+++ b/atom.html
@@ -2,6 +2,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+      <meta charset="utf-8">
+
+      <!-- This is a comment. The browser will ignore it.-->
 
 <div class="">
 
@@ -9,7 +12,51 @@
 <body style="background-color: #889bde;">
 
     <meta charset="utf-8">
-    <title> SWEET DOGS  </title>
+    <title> Dogs Become Valuable Employees at Bank  </title>
+<br>
+<br>
+<br>
+
+    <p>It was revealed this morning that a major high street bank has <strong>begun employing clever canines</strong> to perform basic data-entry tasks in several of its UK data centres. In a statement earlier today a spokesperson for the bank said that training had gone well with the <strong>first intake of ten pooches</strong> and that overall they were just happy to be involved.</p>
+<br>
+<br>
+
+
+    <blockquote>
+      <p>"I've made new friends, we have a great canteen, and in a few months I'll have earned enough for a deposit on my own kennel"</p>
+      <footer>Larry the dog</footer>
+    </blockquote>
+
+
+<br>
+<br>
+<br>
+
+<center>
+<h1>Article Title</h1>
+
+<br>
+
+<h1>Why Cake?</h1>
+
+<h2>Health Benefits</h2>
+<p>Something about cake lifting the soul</p>
+
+<h2>Homemade or Shop Bought?</h2>
+<h3>Homemade</h3>
+<p>Something about homemade cakes</p>
+<h3>Shop Bought</h3>
+<p>Something about shop bought cakes</p>
+</center>
+
+
+<ul>
+  <li>Strawberries</li>
+  <li>Bananas</li>
+  <li>Blueberries</li>
+</ul>
+
+<br>
 
     <meta name='viewport' content='width=device-width' />
 
@@ -17,12 +64,12 @@
 <br>
 <br>
 <center>
-<a href="atom2.html">ANOTHER CUTE DOG </a>
+<a href="atom2.html">NEXT </a>
 <br>
 <br>
 <br>
 <br>
-<a href="#"></a>  <img src="dog-puppy-on-garden-royalty-free-image-1586966191.jpg" alt="dog">
+<a href="#"></a>  <img src="image\dog-puppy-on-garden-royalty-free-image-1586966191.jpg" alt="dog">
 
 <link rel="file:///C:/Users/marci/Desktop/Atom/atom2.html" href="/css/master.css">
 </center>
