--- a/atom2.html
+++ b/atom2.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+      <meta charset="utf-8">
 
+<div class="">
+
+</div>
 <body style="background-color: #889bde;">
 
-  <head>
     <meta charset="utf-8">
-
-
-    <title> SWEET DOGS   </title>
+    <title> Dogs Become Valuable Employees at Bank  </title>
+<br>
+<br>
+<br>
 
     <meta name='viewport' content='width=device-width' />
 
 <br>
 <br>
 <center>
-<a href="#"></a>   <img src="golden-retriever-puppy.jpg" alt="dog">
+
+  <br>
+  <br>
+  <center>
+  <a href="atom2.html">BACK </a>
+  <br>
+  <br>
+  <br>
+  <br>
+  <a href="#"></a>  <img src="image\golden-retriever-puppy.jpg" alt="dog">
+<link rel="file:///C:/Users/marci/Desktop/Atom/atom2.html" href="/css/master.css">
+</center>
+  <body>
+
+
 <br>
 <br>
 </center>
