--- a/atom.html
+++ b/atom.html
@@ -69,7 +69,7 @@
 <br>
 <br>
 <br>
-<a href="#"></a>  <img src="image\dog-puppy-on-garden-royalty-free-image-1586966191.jpg" alt="dog">
+<a href="#"></a>  <img src="image\https://raw.githubusercontent.com/DMU-P2625969/labs/main/dog-puppy-on-garden-royalty-free-image-1586966191.jpg" alt="dog">
 
 <link rel="file:///C:/Users/marci/Desktop/Atom/atom2.html" href="/css/master.css">
 </center>
