--- a/atom.html
+++ b/atom.html
@@ -69,8 +69,8 @@
 <br>
 <br>
 <br>
-<a href="#"></a>  <img src="image\dog-puppy-on-garden-royalty-free-image-1586966191.jpg" alt="dog">
-
+<center>
+<a href="#"></a>  <img src="https://raw.githubusercontent.com/DMU-P2625969/labs/main/dog-puppy-on-garden-royalty-free-image-1586966191.jpg"
 <link rel="file:///C:/Users/marci/Desktop/Atom/atom2.html" href="/css/master.css">
 </center>
   <body>
