--- a/atom2.html
+++ b/atom2.html
@@ -29,8 +29,8 @@
   <br>
   <br>
   <br>
-  <a href="#"></a>  <img src="image\golden-retriever-puppy.jpg" alt="dog">
-<link rel="file:///C:/Users/marci/Desktop/Atom/atom2.html" href="/css/master.css">
+  <a href="#"></a>  <img src="https://raw.githubusercontent.com/DMU-P2625969/labs/main/golden-retriever-puppy.jpg" alt="dog">
+<link rel="https://github.com/DMU-P2625969/labs/blob/main/atom.html" href="/css/master.css">
 </center>
   <body>
 
