--- a/atom.html
+++ b/atom.html
@@ -79,9 +79,9 @@
     <br>
 
     <video width="320" height="240" controls>
- <source src="https://github.com/DMU-P2625969/labs/blob/main/mixkit-smiling-dog-1552-large.mp4" type="video/mp4">
- <source src="https://github.com/DMU-P2625969/labs/blob/main/mixkit-smiling-dog-1552-large.mp4" type="video/ogg">
- Your browser does not support the video tag.
+      <video>
+  <source src="https://github.com/DMU-P2625969/labs/blob/main/mixkit-smiling-dog-1552-large.mp4" type='video/mp4' />
+</video>
 </video>
 
   </body>
