--- a/atom.html
+++ b/atom.html
@@ -83,6 +83,10 @@
   <source src="https://github.com/DMU-P2625969/labs/blob/main/mixkit-smiling-dog-1552-large.mp4" type='video/mp4' />
 </video>
 
+<video controls>
+  <source src="https://github.com/DMU-P2625969/labs/blob/main/mixkit-smiling-dog-1552-large.mp4" type='video/mp4' />
+  <p>Your browser does not support the video element. Please click <a href='clips/dog.mp4'>here</a> to download an mp4 of the video.</p>
+</video>
 
   </body>
 </html>
