--- a/atom.html
+++ b/atom.html
@@ -79,10 +79,11 @@
     <br>
 
 
-<video controls>
-  <source src="https://github.com/DMU-P2625969/labs/blob/main/mixkit-smiling-dog-1552-large.mp4" type='video/mp4' />
-  <p>Your browser does not support the video element. Please click <a href='clips/dog.mp4'>here</a> to download an mp4 of the video.</p>
-</video>
+    <audio>
+      <source src="sounds/dog.ogg" type='audio/ogg' />
+      <source src="sounds/dog.wav" type='audio/wav' />
+      <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.mp3" type='audio/mpeg' />
+    </audio>
 
   </body>
 </html>
