--- a/atom.html
+++ b/atom.html
@@ -80,8 +80,8 @@
 
 
     <audio>
-      <source src="sounds/dog.ogg" type='audio/ogg' />
-      <source src="sounds/dog.wav" type='audio/wav' />
+      <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.ogg" type='audio/ogg' />
+      <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.wav" type='audio/wav' />
       <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.mp3" type='audio/mpeg' />
     </audio>
 
