--- a/atom.html
+++ b/atom.html
@@ -79,9 +79,9 @@
     <br>
 
     <audio>
-      <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.ogg" type='audio/ogg' />
-      <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.wav" type='audio/wav' />
-      <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.mp3" type='audio/mpeg' />
+      <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.ogg" type='audio/ogg' controls/>
+      <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.wav" type='audio/wav' controls/>
+      <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.mp3" type='audio/mpeg' controls/>
     </audio>
 
   </body>
