--- a/atom.html
+++ b/atom.html
@@ -78,11 +78,13 @@
     <br>
     <br>
 
-    <audio>
-      <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.ogg" type='audio/ogg' controls/>
-      <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.wav" type='audio/wav' controls/>
-      <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.mp3" type='audio/mpeg' controls/>
+    <audio controls>
+      <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.ogg" type='audio/ogg' />
+      <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.wav" type='audio/wav' />
+      <source src="https://github.com/DMU-P2625969/labs/blob/main/mp3%20github.mp3" type='audio/mpeg' />
+      <p>Your browser does not support the audio element. Please click <a href='sounds/dog.mp3'>here</a> to download an mp3 of the audio.</p>
     </audio>
+    
 
   </body>
 </html>
