--- a/atom.html
+++ b/atom.html
@@ -11,13 +11,21 @@
 </div>
 <body style="background-color: #889bde;">
 
+
     <meta charset="utf-8">
     <title> Dogs Become Valuable Employees at Bank  </title>
 <br>
 <br>
 <br>
 
+<font face="Digital, Arial, Helvetica, sans-serif">
+
+<font color="brown">text
+
     <p>It was revealed this morning that a major high street bank has <strong>begun employing clever canines</strong> to perform basic data-entry tasks in several of its UK data centres. In a statement earlier today a spokesperson for the bank said that training had gone well with the <strong>first intake of ten pooches</strong> and that overall they were just happy to be involved.</p>
+
+</font>
+
 <br>
 <br>
 
@@ -76,14 +84,16 @@
   <body>
 
     <br>
-    <br>
+    <audio controls>
+    <source src="music/mp3 github.ogg" type='audio/ogg' />
+    <source src="music/mp3 github.wav" type='audio/wav' />
+    <source src="music/mp3 github.mp3" type='audio/mpeg' />
+    <p>Your browser does not support the audio element. Please click <a href='sounds/dog.mp3'>here</a> to download an mp3 of the audio.</p>
+  </audio>
 
-    <iframe width="420" height="315"
-src="https://youtu.be/4F3jLRKkcvQ">
-</iframe>
-  <br>
 
-  <iframe
+</font>
+
 
   </body>
 </html>
