--- a/atom.html
+++ b/atom.html
@@ -85,9 +85,9 @@
 
     <br>
     <audio controls>
-    <source src="music/mp3 github.ogg" type='audio/ogg' />
-    <source src="music/mp3 github.wav" type='audio/wav' />
-    <source src="music/mp3 github.mp3" type='audio/mpeg' />
+    <source src="mp3 github.ogg" type='audio/ogg' />
+    <source src="mp3 github.wav" type='audio/wav' />
+    <source src="mp3 github.mp3" type='audio/mpeg' />
     <p>Your browser does not support the audio element. Please click <a href='sounds/dog.mp3'>here</a> to download an mp3 of the audio.</p>
   </audio>
 
