--- a/atom.html
+++ b/atom.html
@@ -20,7 +20,7 @@
 
 <font face="Digital, Arial, Helvetica, sans-serif">
 
-<font color="brown">text
+<font color="brown">
 
     <p>It was revealed this morning that a major high street bank has <strong>begun employing clever canines</strong> to perform basic data-entry tasks in several of its UK data centres. In a statement earlier today a spokesperson for the bank said that training had gone well with the <strong>first intake of ten pooches</strong> and that overall they were just happy to be involved.</p>
 
