--- a/atom.html
+++ b/atom.html
@@ -7,7 +7,7 @@
       <!-- This is a comment. The browser will ignore it.-->
 
 <div class="">
-
+<!—you need to add all your contents into <body> section…not <head> section -->
 </div>
 <body style="background-color: #889bde;">
 
@@ -78,12 +78,17 @@
 <br>
 <br>
 <center>
+  <!—you need to close your tag here -->
+  
 <a href="#"></a>  <img src="https://raw.githubusercontent.com/DMU-P2625969/labs/main/dog-puppy-on-garden-royalty-free-image-1586966191.jpg"
+                       
+               <!—this should be on <head> section -->        
 <link rel="file:///C:/Users/marci/Desktop/Atom/atom2.html" href="/css/master.css">
 </center>
   <body>
 
     <br>
+    <!—Good to see your video element with three different file formats -->
     <audio controls>
     <source src="mp3 github.ogg" type='audio/ogg' />
     <source src="mp3 github.wav" type='audio/wav' />
