--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 <!-- Video -->
-<video width= 100% height= 100% ;poster="https://static.tumblr.com/hw0tng0/B8jnjnqvu/logo_cinderella.png" controls>
+<video width= 100% height= 100% ;poster; controls>
   <source src="Cinderella.mp4" type="video/mp4">
   <source src="Cinderella.wmv" type="video/wmv">
   Your browser does not support the video tag.
