--- a/index2.html
+++ b/index2.html
@@ -129,7 +129,7 @@ img {
 <br>
 
 <!-- LILLY JAMES PHOTO -->
-<p> <img src="https://raw.githubusercontent.com/DMU-P2625969/multimedia/main/new.lily.james.png" style="margin-right:25px;margin-left:20px" ALIGN="left"; alt="Image" height="225" width="275">
+<p> <img src="https://raw.githubusercontent.com/DMU-P2625969/multimedia/main/new.lily.james.png" style="margin-right:25px;margin-left:20px;margin-bottom:20px" ALIGN="left"; alt="Image" height="225" width="275">
 <!-- Short bioghraphy -->
     Lily James was born on 5 April 1989 in Esher, Surrey, the daughter of Ninette Mantle, an actress, and James "Jamie" Thomson, a musician. She has two brothers, one older and one younger. Her paternal grandmother, Helen Horton, was an American actress. She attended Tring Park School for the Performing Arts and subsequently went on to study acting at the Guildhall School of Music and Drama in London, graduating in 2010. Shortly thereafter, she signed with Tavistock Wood management in London.
       James went on to play Natasha Rostova in the television series War & Peace (2016), and starring roles in several films, including Baby Driver (2017), Darkest Hour (2017),The Guernsey Literary and Potato Peel Pie Society (2018), the musical Mamma Mia! Here We Go Again (2018), Yesterday (2019) and Rebecca (2020).</p>
