--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 
   <title>Cindirella Movie 2015 </title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport " content="width=device-width, initial-scale=1.0" />
 
 </head>
 <body>
@@ -129,7 +129,7 @@ img {
 <br>
 
 <!-- LILLY JAMES PHOTO -->
-<p> <img src="https://raw.githubusercontent.com/DMU-P2625969/multimedia/main/new.lily.james.png" style="margin-right:25px;margin-left:20px;margin-bottom:20px" ALIGN="left"; alt="Image" height="225" width="275">
+<p> <img src="https://raw.githubusercontent.com/DMU-P2625969/multimedia/main/new.lily.james.png" style="margin-right:25px;margin-left:20px;margin-bottom:30px" ALIGN="left"; alt="Image" height="225" width="275">
 <!-- Short bioghraphy -->
     Lily James was born on 5 April 1989 in Esher, Surrey, the daughter of Ninette Mantle, an actress, and James "Jamie" Thomson, a musician. She has two brothers, one older and one younger. Her paternal grandmother, Helen Horton, was an American actress. She attended Tring Park School for the Performing Arts and subsequently went on to study acting at the Guildhall School of Music and Drama in London, graduating in 2010. Shortly thereafter, she signed with Tavistock Wood management in London.
       James went on to play Natasha Rostova in the television series War & Peace (2016), and starring roles in several films, including Baby Driver (2017), Darkest Hour (2017),The Guernsey Literary and Potato Peel Pie Society (2018), the musical Mamma Mia! Here We Go Again (2018), Yesterday (2019) and Rebecca (2020).</p>
@@ -164,7 +164,7 @@ img {
 <br>
 <br>
 <br>
-<p> <img src="https://raw.githubusercontent.com/DMU-P2625969/multimedia/main/new.richard%20madden.png" style="margin-right:25px;margin-left:20px" ALIGN="left"; alt="Image" height="225" width="275"ALIGN="left";>
+<p> <img src="https://raw.githubusercontent.com/DMU-P2625969/multimedia/main/new.richard%20madden.png" style="margin-right:25px;margin-left:20px;margin-bottom: 30px;" ALIGN="left"; alt="Image" height="225" width="275"ALIGN="left";>
 
 <!-- Short bioghraphy -->
     Richard Madden (born 18 June 1986) is a Scottish actor. Born and raised in Renfrewshire near Glasgow, Madden rose to prominence in 2011 for his portrayal of Robb Stark in the first three seasons of HBO's fantasy drama Game of Thrones, for which he received the Screen International Award for Star of Tomorrow.
