--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 <!-- Video -->
-<video width= 100% height= 100% ;poster; controls>
+<video width= 50% height= 50% ;poster="cinderella shoe.gif"; controls>
   <source src="Cinderella.mp4" type="video/mp4">
   <source src="Cinderella.wmv" type="video/wmv">
   Your browser does not support the video tag.
