--- a/index2.html
+++ b/index2.html
@@ -84,7 +84,7 @@ div.c {
   border: 3px white solid;
   padding: 30px 10px;
   margin: 10px;
-  margin: 10px 10px 10px;
+  margin: 10px 10px;
   }
 
   p2 {
@@ -129,12 +129,19 @@ img {
 <br>
 
 <!-- LILLY JAMES PHOTO -->
-<p> <img src="https://raw.githubusercontent.com/DMU-P2625969/multimedia/main/new.lily.james.png" style="margin-right:25px;margin-left:20px;margin-bottom:30px" ALIGN="left"; alt="Image" height="225" width="275">
+<p> <img src="https://raw.githubusercontent.com/DMU-P2625969/multimedia/main/new.lily.james.png" style="margin-right:25px;margin-left:20px; margin-bottom:20px;" ALIGN="left"; alt="Image" height="225" width="275">
 <!-- Short bioghraphy -->
-    Lily James was born on 5 April 1989 in Esher, Surrey, the daughter of Ninette Mantle, an actress, and James "Jamie" Thomson, a musician. She has two brothers, one older and one younger. Her paternal grandmother, Helen Horton, was an American actress. She attended Tring Park School for the Performing Arts and subsequently went on to study acting at the Guildhall School of Music and Drama in London, graduating in 2010. Shortly thereafter, she signed with Tavistock Wood management in London.
-      James went on to play Natasha Rostova in the television series War & Peace (2016), and starring roles in several films, including Baby Driver (2017), Darkest Hour (2017),The Guernsey Literary and Potato Peel Pie Society (2018), the musical Mamma Mia! Here We Go Again (2018), Yesterday (2019) and Rebecca (2020).</p>
+    Lily James was born on 5 April 1989 in Esher, Surrey, the daughter of Ninette Mantle, an actress, and James "Jamie" Thomson, a musician. She has two brothers, one older and one younger. Her paternal grandmother, Helen Horton, was an American actress.
+    She attended Tring Park School for the Performing Arts and subsequently went on to study acting at the Guildhall School of Music and Drama in London, graduating in 2010. Shortly thereafter, she signed with Tavistock Wood management in London.
+    James went on to play Natasha Rostova in the television series War & Peace (2016), and starring roles in several films, including Baby Driver (2017), Darkest Hour (2017),
+    The Guernsey Literary and Potato Peel Pie Society (2018), the musical Mamma Mia! Here We Go Again (2018), Yesterday (2019) and Rebecca (2020).
+    James was photographed by Annie Leibovitz as Cinderella, in the blue gown her character wears to the ball, for the December 2014 issue of Vogue. James also made her singing debut in the film singing "Sing Sweet Nightingale," "Lavender's Blue" and "A Dream Is a Wish Your Heart Makes" from the 1950 animated film in the end credits.
+    In 2016, she returned to television in the 2016 BBC historical drama series War & Peace, playing Natasha Rostova. She also starred in her second major film, as Elizabeth Bennet in the action-horror film Pride and Prejudice and Zombies, a parody of Jane Austen's Pride and Prejudice. It received mixed reviews and failed to break even at the box office.
+    James played Juliet in the Garrick Theatre's production of Romeo and Juliet directed by Rob Ashford and actor-director Kenneth Branagh in 2016.
+    In 2017, she appeared in several major films. She played Debora, the love interest of the main character, Baby, in the action film Baby Driver. She played Elizabeth Layton, a secretary to PM Winston Churchill, in the war drama film Darkest Hour. She headlined the World War II drama film The Exception, playing a British agent posing as a servant to the exiled Kaiser Wilhelm II. </p>
 
-
+<br>
+<br>
 <br>
 <br>
 <br>
@@ -164,12 +171,16 @@ img {
 <br>
 <br>
 <br>
-<p> <img src="https://raw.githubusercontent.com/DMU-P2625969/multimedia/main/new.richard%20madden.png" style="margin-right:25px;margin-left:20px;margin-bottom: 30px;" ALIGN="left"; alt="Image" height="225" width="275"ALIGN="left";>
+<p> <img src="https://raw.githubusercontent.com/DMU-P2625969/multimedia/main/new.richard%20madden.png" style="margin-right:25px;margin-left:20px;margin-bottom:25px;" ALIGN="left"; alt="Image" height="225" width="275"ALIGN="left";>
 
 <!-- Short bioghraphy -->
+
     Richard Madden (born 18 June 1986) is a Scottish actor. Born and raised in Renfrewshire near Glasgow, Madden rose to prominence in 2011 for his portrayal of Robb Stark in the first three seasons of HBO's fantasy drama Game of Thrones, for which he received the Screen International Award for Star of Tomorrow.
 In 2018, he gained acclaim for his performance as a war veteran and Principal Protection Officer in the BBC thriller series Bodyguard, for which he won the Golden Globe Award for Best Actor – Television Series Drama.
 Madden made his screen debut as a child actor and later began performing on stage whilst a student at the Royal Conservatoire of Scotland. In 2007, he toured with Shakespeare's Globe company as Romeo in Romeo and Juliet, a role he reprised in the West End in 2016.
+In 2018, Madden garnered acclaim and recognition for his portrayal of Sergeant David Budd, a war veteran and Principal Protection Officer, in the BBC thriller series Bodyguard. Tim Goodman of The Hollywood Reporter wrote that Madden portrayed Budd "with aplomb", while The Atlantic's Sophie Gilbert highlighted his "success at conveying [Budd's] superb instincts, his cool head under fire, and his complex psyche". The series went on to become the UK's most watched television drama since current records began, which led to its release to a worldwide audience on Netflix in October 2018. Madden's performance earned him a Golden Globe Award for Best Actor – Television Series Drama.Bodyguard received a Primetime Emmy Award nomination for Outstanding Drama Series; however, critics and viewers alike expressed disappointment over the fact that Madden did not receive an Emmy nomination for his performance, deeming it a snub.
+
+In 2019, Madden portrayed music manager John Reid in the Elton John biopic Rocketman, which was released in May, and appeared as a lieutenant in Sam Mendes' war film 1917, which was released in December. He will star as Ikaris in the Marvel Cinematic Universe film Eternals, directed by Chloé Zhao, which is scheduled for a November 2021 release. He has also been cast in a leading role in an upcoming Amazon Studios "multi-series" titled Citadel, executively produced by Anthony and Joe Russo, alongside Priyanka Chopra.
 </p>
 <br>
 <br>
